--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "surendra mishra",
   "license": "MIT",
   "scripts": {
-    "dev": "pm2 start lib/server.js --watch  --interpreter babel-node"
+    "dev": "pm2 start lib/server.js --watch  --interpreter babel-node",
+    "webpack": "webpack -wd"
   },
   "babel": {
     "presets": [
@@ -19,15 +20,21 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.0",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "7",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "pm2": "^3.3.1"
+    "pm2": "^3.3.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "webpack": "^4.29.6"
   }
 }
