--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "pm2 start lib/server.js --watch  --interpreter babel-node",
-    "webpack": "webpack -wd"
+    "webpack": "webpack -wd",
+    "test":"jest --watch"
   },
   "babel": {
     "presets": [
@@ -21,13 +22,14 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.0",
     "eslint-plugin-react": "^7.12.4",
+    "jest": "^19.0.2",
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-loader": "7",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "ejs": "^2.6.1",
