added proptype check

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "pm2": "^3.3.1",
+    "prop-type": "^0.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "webpack": "^4.29.6"
