--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "enzyme": "^2.9.1",
     "eslint": "^5.15.0",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^19.0.2",
