--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "lodash.debounce": "^4.0.8",
+    "lodash.pickby": "^4.6.0",
     "pm2": "^3.3.1",
     "prop-type": "^0.0.1",
     "react": "^16.8.3",
